--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ ml-dtypes==0.4.1
 namex==0.0.8
 narwhals==1.37.1
 numpy==1.26.4
-openai==1.75.0
+openai==1.76.2
 opt_einsum==3.4.0
 optree==0.14.0
 orjson==3.10.15
@@ -74,7 +74,7 @@ six==1.16.0
 smmap==5.0.2
 sniffio==1.3.1
 starlette==0.46.2
-streamlit==1.45.0
+streamlit>=1.30.0
 tenacity==9.1.2
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
